ステア表示

--- a/src/visualization/nhk2025b_visualize_swerve/package.xml
+++ b/src/visualization/nhk2025b_visualize_swerve/package.xml
@@ -9,6 +9,7 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>visualization_msgs</depend>
   <depend>nhk2025b_msgs</depend>
 
