--- a/src/behavior/nhk2025b_behavior/package.xml
+++ b/src/behavior/nhk2025b_behavior/package.xml
@@ -9,8 +9,8 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>nav_msgs</depend>
-  <depend>geometry_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
