map publisherを名称変更

--- a/src/common/nhk2025b_map_publisher/package.xml
+++ b/src/common/nhk2025b_map_publisher/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>nhk2025b_behavior</name>
+  <name>nhk2025b_map_publisher</name>
   <version>0.0.1</version>
   <description>ロボットの行動管理</description>
   <maintainer email="kzs321kzs@gmail.com">Kazusa Hashimoto</maintainer>
