--- a/.github/workflows/ros2_ci.yaml
+++ b/.github/workflows/ros2_ci.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           rosdep update && 
           apt-get update && 
-          rosdep install --from-path . -i -y --rosdistro ${{ matrix.rosdistro }}
+          rosdep install --from-path src -i -y --rosdistro ${{ matrix.rosdistro }}
 
       - name: Install diagnostic-updater
         working-directory: nhk2025b_ros2
