--- a/.github/workflows/clang_auto_fix.yaml
+++ b/.github/workflows/clang_auto_fix.yaml
@@ -61,7 +61,7 @@ jobs:
   
       - name: Link compile_commands.json
         working-directory: nhk2025b_ros2
-        run: ln -sf src/compile_commands.json .
+        run: ln -sf build/compile_commands.json .
 
       - name: Run clang-format (auto-fix)
         working-directory: nhk2025b_ros2
@@ -75,7 +75,6 @@ jobs:
 
       - name: Commit and push changes
         working-directory: nhk2025b_ros2
-        run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add .
@@ -83,5 +82,5 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "Auto-fix: applied clang-format and clang-tidy"
-            git push
+            git push origin HEAD:${{ github.head_ref }}
           fi
