--- a/.github/workflows/clang_auto_fix.yaml
+++ b/.github/workflows/clang_auto_fix.yaml
@@ -75,6 +75,7 @@ jobs:
 
       - name: Commit and push changes
         working-directory: nhk2025b_ros2
+        run : |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add .
