--- a/.github/workflows/clang_auto_fix.yaml
+++ b/.github/workflows/clang_auto_fix.yaml
@@ -61,7 +61,7 @@ jobs:
   
       - name: Link compile_commands.json
         working-directory: nhk2025b_ros2
-        run: ln -sf build/compile_commands.json .
+        run: ln -sf build/compile_commands.json src/compile_commands.json
 
       - name: Run clang-format (auto-fix)
         working-directory: nhk2025b_ros2
@@ -78,10 +78,12 @@ jobs:
         run : |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
+          git fetch origin
+          git checkout ${{ github.head_ref }}
           git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
             git commit -m "Auto-fix: applied clang-format and clang-tidy"
-            git push origin HEAD:${{ github.head_ref }}
+            git push
           fi
