--- a/.github/workflows/auto_fix_and_build.yaml
+++ b/.github/workflows/auto_fix_and_build.yaml
@@ -56,6 +56,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git fetch origin
           git checkout ${{ github.head_ref }}
+          git status
           git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
