--- a/src/launch/nhk2025b_launch/CMakeLists.txt
+++ b/src/launch/nhk2025b_launch/CMakeLists.txt
@@ -5,9 +5,9 @@ ament_auto_find_build_dependencies()
 
 ament_auto_package(
   INSTALL_TO_SHARE
+    launch
+    rviz
 #   config
-#   launch
 #   model3d
 #   params
-#   rviz
 )
