--- a/.github/workflows/build_differential.yaml
+++ b/.github/workflows/build_differential.yaml
@@ -1,11 +1,8 @@
-name: c++ style auto fix and colcon build
+name: colcon build differential
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    types: [labeled]
+    types: [opened, synchronize, reopened, labeled]
   workflow_dispatch:
 
 jobs:
@@ -40,9 +37,6 @@ jobs:
         run: |
           rosdep update
           apt-get update
-          apt-get install -y curl lsb-release
-          apt-get install -y clang clang-format
-          apt-get install -y cmake
           rosdep install --from-path src -i -y --rosdistro ${{ matrix.rosdistro }}
 
       - name: Run clang-format (auto-fix)
@@ -65,12 +59,22 @@ jobs:
             git push
           fi
 
+      - name: Get changed packages name
+        id: get_changed_packages
+        working-directory: nhk2025b_ros2
+        run: |
+          modified_packages=$(bash .github/actions/get_differential_package.sh)
+          echo "Modified packages: $modified_packages"
+          touch modified_packages.txt
+          echo "$modified_packages" > modified_packages.txt
+
+          
       - name: Build tests
         id: build_test
         working-directory: nhk2025b_ros2
         run: |
           . /opt/ros/${{ matrix.rosdistro }}/setup.sh && 
-          colcon build
+          colcon build --packages-up-to $(cat modified_packages.txt)
         continue-on-error: true
 
       - name: build_test command success
