--- a/.github/workflows/auto_fix_and_build.yaml
+++ b/.github/workflows/auto_fix_and_build.yaml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
   pull_request:
-    types: [labeled]
+    types: 
+      - labeled
+      - ready_for_review 
   workflow_dispatch:
 
 jobs:
