--- a/.github/workflows/auto_fix_and_build.yaml
+++ b/.github/workflows/auto_fix_and_build.yaml
@@ -36,6 +36,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: nhk2025b_ros2
+      
+      - name: Fetch origin
+        working-directory: nhk2025b_ros2
+        run: | 
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git fetch origin
+          git checkout ${{ github.head_ref }}
 
       - name: Install dependencies
         working-directory: nhk2025b_ros2
@@ -55,10 +63,6 @@ jobs:
       - name: Commit and push changes
         working-directory: nhk2025b_ros2
         run : |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git fetch origin
-          git checkout ${{ github.head_ref }}
           git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
