--- a/.github/workflows/build_differential.yaml
+++ b/.github/workflows/build_differential.yaml
@@ -28,11 +28,15 @@ jobs:
         with:
           path: nhk2025b_ros2
 
-      - name: Install dependencies
+      - name: Update
         working-directory: nhk2025b_ros2
         run: |
           rosdep update
           apt-get update
+      
+      - name: Install dependencies
+        working-directory: nhk2025b_ros2
+        run: |
           rosdep install --from-path src -i -y --rosdistro ${{ matrix.rosdistro }}
 
       - name: Get changed packages name
