--- a/.github/workflows/auto_fix.yaml
+++ b/.github/workflows/auto_fix.yaml
@@ -17,8 +17,13 @@ jobs:
       matrix:
         os: 
           - ubuntu-22.04
+        rosdistro: 
+          - humble
 
     runs-on: ubuntu-latest
+
+    container:
+      image: ros:${{ matrix.rosdistro }}-ros-base
 
     steps:
       - name: Check out repository
