--- a/src/control/nhk2025b_pure_pursuit/package.xml
+++ b/src/control/nhk2025b_pure_pursuit/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp_components</depend>
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
