--- a/src/visualization/nhk2025b_visualize_swerve/package.xml
+++ b/src/visualization/nhk2025b_visualize_swerve/package.xml
@@ -3,7 +3,7 @@
   <name>nhk2025b_visualize_swerve</name>
   <version>0.0.1</version>
   <description>ステアの状態をrvizで表示する</description>
-  <maintainer email="lyco256@gmail.com">Lyco256</maintainer>
+  <maintainer email="kzs321kzs@gmail.com">Kazusa Hashimoto</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
