--- a/src/launch/nhk2025b_launch/param/control.yaml
+++ b/src/launch/nhk2025b_launch/param/control.yaml
@@ -1,4 +1,5 @@
 pure_pursuit:
   ros__parameters:
-    angle_p: 4.0
-    lookahead_time: 0.5
+    angle_p: 10.0
+    angle_lookahead_distance: 1.0
+    lookahead_time: 0.3
