--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -3,7 +3,7 @@ name: Deploy MkDocs
 on:
   push:
     branches:
-      - main 
+      - 104-feat-readme-mkdocs-deploy 
   workflow_dispatch:
 
 jobs:
