--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,57 @@
 site_name: nhk2025b_ros2
+site_url: https://github.com/NITIC-Robot-Club/nhk2025b_ros2
+repo_url: https://github.com/NITIC-Robot-Club/nhk2025b_ros2
+edit_uri: https://github.com/NITIC-Robot-Club/nhk2025b_ros2
 theme:
   name: material
+  features:
+    - navigation.expand
+    - navigation.indexes
+    - navigation.instant
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.code.copy
+    - content.tabs.link
+  language: ja
+  palette:
+    scheme: default
+    toggle:
+      icon: material/toggle-switch
+      name: Switch to dark mode
+      name_solid: Switch to light mode
+      aria_label: Switch color scheme
 
 nav:
   - Home: index.md
 
 # README.md をトップページとして使う場合
 docs_dir: docs
+
+markdown_extensions:
+  - admonition             # !!! note などでアラートブロック
+  - codehilite             # コードハイライト
+  - toc:                   # 目次の自動生成（右サイド）
+      permalink: true
+  - tables                 # 表の拡張
+  - footnotes              # 脚注機能
+  - abbr                   # 略語の補足
+  - def_list               # 定義リスト（: を使うやつ）
+  - attr_list              # HTML属性をマークダウン内で使用可能
+
+  # pymdownx 拡張（Materialテーマ推奨）
+  - pymdownx.superfences   # ネストされたコードブロック
+  - pymdownx.tabbed:       # タブ表示の強化
+      alternate_style: true
+  - pymdownx.details       # 折りたたみ詳細ブロック
+  - pymdownx.emoji         # :smile: のような絵文字
+  - pymdownx.tasklist      # チェックボックスリスト
+  - pymdownx.highlight     # ハイライト強化
+  - pymdownx.inlinehilite  # インラインハイライト
+  - pymdownx.magiclink     # URLを自動リンク化
+  - pymdownx.caret         # ^上付き文字^
+  - pymdownx.mark          # ==マーク==（蛍光ペン風）
+  - pymdownx.tilde         # ~~取り消し線~~
