--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,15 +34,15 @@ theme:
 
 nav:
   - Home: index.md
-  - behavior
-  - common
-  - control
-  - launch
-  - localization
-  - message
-  - planning
-  - simulation
-  - visualization
+  - behavior: behavior
+  - common: common
+  - control: control
+  - launch: launch
+  - localization: localization
+  - message: message
+  - planning: planning
+  - simulation: simulation
+  - visualization: visualization
 
 # README.md をトップページとして使う場合
 docs_dir: docs
