--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -78,4 +78,4 @@ jobs:
 
       - name: Debug
         run: |
-          echo "docs/behavior/nhk2025b_behavior/.pages"
+          cat docs/behavior/nhk2025b_behavior/.pages
