add debug branch

--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -18,6 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: set up git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "ctions@github.com"
+          git branch mkdocs-deploy
+          git checkout mkdocs-deploy
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -79,3 +86,6 @@ jobs:
       - name: Debug
         run: |
           cat docs/behavior/nhk2025b_behavior/.pages
+          git add .
+          git commit -m "update .pages"
+          git push origin mkdocs-deploy -f
