--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -21,7 +21,8 @@ jobs:
       - name: set up git
         run: |
           git config --global user.name "GitHub Actions"
-          git config --global user.email "ctions@github.com"
+          git config --global user.email "actions@github.com"
+          git checkout 104-feat-readme-mkdocs-deploy 
           git branch mkdocs-deploy
           git checkout mkdocs-deploy
 
