--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -40,6 +40,7 @@ jobs:
           mkdir -p docs
 
           cp README.md docs/index.md
+          cp .pages docs/.pages
 
           # src以下のすべてのmdファイルを探す
           find src -name "*.md" | while read -r filepath; do
