--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - '**/*.md'
       - '**/*.yaml'
-      - '**/*.yml
+      - '**/*.yml'
       - '**/*.pages'
   workflow_dispatch:
 
