--- a/.github/workflows/auto_fix.yaml
+++ b/.github/workflows/auto_fix.yaml
@@ -67,6 +67,6 @@ jobs:
       - name: Success
         run: echo "Auto-fix completed successfully."
       
-  build_differential:
-    uses: ./.github/workflows/build_differential.yaml
-    needs: auto_fix
+  # build_differential:
+  #   uses: ./.github/workflows/build_differential.yaml
+  #   needs: auto_fix
