--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -3,7 +3,7 @@ name: Build and Push nhk2025b_ros2 to GHCR
 on:
   push:
     branches:
-      - main
+      - 113-feat-actions-add-docker
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'  # 毎日0時（UTC）
