--- a/.github/workflows/auto_fix_and_build_full_docker.yaml
+++ b/.github/workflows/auto_fix_and_build_full_docker.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   auto-fix-and-build:
     container:
-      image: ghcr.io/nitic-robot-club/nhk2025b_ros2:${GITHUB_REF#refs/heads/}
+      image: ghcr.io/nitic-robot-club/nhk2025b_ros2:${{ github.ref_name }}
     runs-on: ubuntu-latest
 
     steps:
