--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -34,7 +34,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/nitic-robot-club/nhk2025b_ros2:${{ github.ref_name }}
+            # ghcr.io/nitic-robot-club/nhk2025b_ros2:${{ github.ref_name }}
+            ghcr.io/nitic-robot-club/nhk2025b_ros2:latest
           labels: |
             org.opencontainers.image.title=nhk2025b_ros2
             org.opencontainers.image.source=https://github.com/${ github.repository }
