--- a/.github/workflows/auto_fix_and_build_full_docker.yaml
+++ b/.github/workflows/auto_fix_and_build_full_docker.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   auto-fix-and-build:
     container:
-      image: ghcr.io/nitic-robot-club/nhk2025b_ros2:${{ github.ref_name || 'main' }}
+      image: ghcr.io/nitic-robot-club/nhk2025b_ros2:latest
     runs-on: ubuntu-latest
 
     steps:
