--- a/.github/workflows/auto_fix_and_build_full_docker.yaml
+++ b/.github/workflows/auto_fix_and_build_full_docker.yaml
@@ -16,7 +16,7 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git fetch origin
-          git checkout ${{ github.head_ref }}
+          git checkout ${{ github.ref_name }}
 
       - name: Run clang-format (auto-fix)
         working-directory: /home/nitic-robot-club/nhk2025b_ros2
