--- a/.github/workflows/auto_fix_and_build_full_docker.yaml
+++ b/.github/workflows/auto_fix_and_build_full_docker.yaml
@@ -20,6 +20,7 @@ jobs:
         run: | 
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}          
           git fetch origin
           git checkout ${{ github.ref_name }}
 
@@ -36,7 +37,7 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "Auto-fix: applied clang-format and clang-tidy"
-            git push origin ${{ github.ref_name }}
+            git push
           fi
 
       - name: Build tests
